syntax = "proto3";

package api.submission.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/api/datetime.proto";
import "validate/validate.proto";

option go_package="github.com/qthuy2k1/thesis_management_backend/submission/api/v1";

service SubmissionService {
    rpc CreateSubmission(CreateSubmissionRequest) returns (CreateSubmissionResponse){
        option (google.api.http) = {
            post: "/api/submit"
            body: "*"
        };
    }

    rpc GetSubmission(GetSubmissionRequest) returns (GetSubmissionResponse){
        option (google.api.http) = {
            get: "/api/submit/{id}"
        };
    }

    rpc UpdateSubmission(UpdateSubmissionRequest) returns (UpdateSubmissionResponse){
        option (google.api.http) = {
            put: "/api/submit/{id}"
            body: "*"
        };
    }

    rpc DeleteSubmission(DeleteSubmissionRequest) returns (DeleteSubmissionResponse){
        option (google.api.http) = {
            delete: "/api/submit/{id}"
        };
    }

    rpc GetAllSubmissionsOfExercise(GetAllSubmissionsOfExerciseRequest) returns (GetAllSubmissionsOfExerciseResponse) {
        option (google.api.http) = {
            get: "/api/submit/ex/{exerciseID}"
        };
    }

    rpc GetSubmissionOfUser(GetSubmissionOfUserRequest) returns (GetSubmissionOfUserResponse){
        option (google.api.http) = {
            get: "/api/exercise/{exerciseID}/submit/{userID}"
        };
    }
}

message CommonSubmissionResponse {
    int64 statusCode = 1 [(validate.rules).int64.gte = 1];
    string message = 2 [(validate.rules).string = {min_len: 2}];
}


// ====== submission ======
message SubmissionInput {
    string userID = 1;
    int64 exerciseID = 2 [(validate.rules).int64.gte = 1];
    google.type.DateTime submission_date = 3;
    string status = 4 [(validate.rules).string = {min_len: 2}];
    repeated AttachmentSubmissionInput attachments = 5;
}

message AttachmentSubmissionInput {
    string fileURL = 1;
    string authorID = 2;
    string name = 3;
    int64 submissionID = 5;
    int64 size = 7;
    string type = 8;
    string thumbnail = 9;
}


message SubmissionResponse {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    string userID = 2;
    int64 exerciseID = 3 [(validate.rules).int64.gte = 1];
    google.type.DateTime submission_date = 4;
    string status = 5 [(validate.rules).string = {min_len: 2}];
    repeated AttachmentSubmissionResponse attachments = 6;
}

message AttachmentSubmissionResponse {
    int64 id = 1;
    string fileURL = 2;
    string status = 3;
    AuthorSubmissionResponse author = 6;
    google.protobuf.Timestamp created_at = 7;
    int64 size = 8;
    string mimeType = 9;
    string thumbnail = 10;
    string fileName = 11;
}

message CreateSubmissionRequest {
   SubmissionInput submission = 1 [(validate.rules).message = {required: true}];
}

message CreateSubmissionResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
}


// ====== GET ======
message GetSubmissionRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    string studentID = 2;
}

message GetSubmissionResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
    SubmissionResponse submission = 2 [(validate.rules).message = {required: true}];
}

// ====== PUT ======
message UpdateSubmissionRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    SubmissionInput submission = 2 [(validate.rules).message = {required: true}];
}

message UpdateSubmissionResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== DELETE ======
message DeleteSubmissionRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message DeleteSubmissionResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== GET ALL OF EXERCISE ======
message GetAllSubmissionsOfExerciseRequest {
    int64 exerciseID = 1 [(validate.rules).int64.gte = 1];
}

message GetAllSubmissionsOfExerciseResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
    int64 totalCount = 2 [(validate.rules).int64.gte = 0];
    repeated SubmissionResponse submissions = 3;
}

message GetSubmissionOfUserRequest {
    string userID = 1;
    int64 exerciseID = 2;
}

message GetSubmissionOfUserResponse {
    CommonSubmissionResponse response = 1 [(validate.rules).message = {required: true}];
    SubmissionResponse submission = 2;
}


message AuthorSubmissionResponse {
    string id = 1;
    optional string class = 2 [(validate.rules).string = {min_len: 4, max_len: 10}];
    optional string major = 3 [(validate.rules).string = {min_len: 2}];
    optional string phone = 4 [(validate.rules).string = {min_len: 10, max_len: 11}];
    string photoSrc = 5;
    string role = 6 [(validate.rules).string = {in: ["teacher", "student", "admin"]}];
    string name = 7 [(validate.rules).string = {min_len: 2, max_len: 200}];
    string email = 8 [(validate.rules).string.email = true];
}